<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
        android:orientation="vertical" >

            <ImageSwitcher
                android:id="@+id/imageSwitcher1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Degung"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentangDegung"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageSwitcher
                android:id="@+id/imageSwitcher2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Kecapi"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentangKecapi"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageSwitcher
                android:id="@+id/imageSwitcher3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Suling"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentangSuling"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageSwitcher
                android:id="@+id/imageSwitcher4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Angklung"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentangAngklung"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageSwitcher
                android:id="@+id/imageSwitcher5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Karinding"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentangKarinding"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
